trunk/Archive/8bca7f7ce1847a210a00c053da3a80ff-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:2:5: error: ‘pair’ does not name a type
     pair<_FwdIt, _FwdIt>
     ^
